--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,5 +1,6 @@
 #sidebar {
-  background: #020509;
+  background: #fefefe;
+  border-right:1px solid lightgray;
   grid-area: sidebar;
   overflow-y: auto;
   padding: 20px;
@@ -11,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #f3f4f6;
+  color: black;
   margin-bottom: 30px;
   /* color: #E85B6B; */
 }
@@ -37,7 +38,7 @@
 }
 
 .sidebar__menu > h2 {
-  color: #3ea175;
+  color: #2C599D;
   font-size: 16px;
   margin-top: 15px;
   margin-bottom: 5px;
@@ -53,12 +54,12 @@
 }
 
 .active_menu_link {
-  background: rgba(62, 161, 117, 0.3);
-  color: #3ea175;
+  background: #D5DEEB;
+  color: #2C599D;
 }
 
 .active_menu_link a {
-  color: #3ea175 !important;
+  color: #2C599D !important;
 }
 
 .sidebar__link > a {
